conf: machine: add new Cortex-M overlays
https://onedigi.atlassian.net/browse/DEL-8581

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -33,6 +33,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_lvds_ccimx8m-dvk.dtbo \
     digi/_ov_board_user-leds_ccimx8m-dvk.dtbo \
     digi/_ov_som_bt_ccimx8m.dtbo \
+    digi/_ov_som_cm4_ccimx8mm.dtbo \
     digi/_ov_som_mca-keypad_ccimx8m.dtbo \
     digi/_ov_som_wifi_ccimx8m.dtbo \
 "
