--- a/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mn-dvk.conf
@@ -34,6 +34,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_user-leds_ccimx8m-dvk.dtbo \
     digi/_ov_board_v1-v2_ccimx8mn-dvk.dtbo \
     digi/_ov_som_bt_ccimx8m.dtbo \
+    digi/_ov_som_cm7_ccimx8mn.dtbo \
     digi/_ov_som_mca-keypad_ccimx8m.dtbo \
     digi/_ov_som_v1_ccimx8mn.dtbo \
     digi/_ov_som_wifi_ccimx8m.dtbo \
