--- a/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
+++ b/meta-digi-arm/conf/machine/ccimx8x-sbc-pro.conf
@@ -26,6 +26,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_user-leds_ccimx8x-sbc-pro.dtbo \
     digi/_ov_board_v1-v3_ccimx8x-sbc-pro.dtbo \
     digi/_ov_som_bt_ccimx8x.dtbo \
+    digi/_ov_som_cm4_ccimx8x.dtbo \
     digi/_ov_som_mca-keypad_ccimx8x.dtbo \
     digi/_ov_som_quad_ccimx8x.dtbo \
     digi/_ov_som_wifi_ccimx8x.dtbo \
