swupdate: use dynamic mtd-blacklist for configuration file
The 'mtd-blacklist' parameter prevents swupdate from acting upon those
partitions that we consider sensitive.
Make such list platform-dependent.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-dey/recipes-support/swupdate/swupdate/swupdate.cfg
+++ b/meta-digi-dey/recipes-support/swupdate/swupdate/swupdate.cfg
@@ -12,7 +12,7 @@ globals : {
 	verbose = true;
 	loglevel = 5;
 	syslog = true;
-	mtd-blacklist = "0 1 2";
+	#mtd-blacklist
 	#public-key-file
 };
 
