ccmp1: support different DDR3 configurations
This commit implements the support to allow different memory configurations for
the CCMP1 platforms, adding support to 512MB and 1GB memory variants for the CCMP15.

https://onedigi.atlassian.net/browse/DEL-8752

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -18,8 +18,8 @@ MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAM
 # boot device
 # =========================================================================
 # Configure the list of boards that enable NAND/SDCARD
-DEVICE_BOARD_ENABLE:NAND   += "ccmp15-dvk"
-DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard', 'ccmp15-dvk', '', d)}"
+DEVICE_BOARD_ENABLE:NAND   += "${STM32MP_DEVICETREE}"
+DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard', '${STM32MP_DEVICETREE}', '', d)}"
 
 # =========================================================================
 # U-Boot configs
@@ -28,14 +28,11 @@ DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard
 UBOOT_CONFIG = "ccmp15-dvk"
 UBOOT_CONFIG[ccmp15-dvk] = "ccmp15-dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
-# Platform U-Boot settings
-UBOOT_DTB_NAME = "ccmp15-dvk.dtb"
-
 # =========================================================================
 # Machine settings
 # =========================================================================
 # Define list of devicetree per board
-STM32MP_DEVICETREE ??= "ccmp15-dvk"
+STM32MP_DEVICETREE ??= "ccmp15-dvk-512MB ccmp15-dvk-1GB"
 # Extra DTB for board - need to specify it with .dtb ...
 STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     ccmp157-dvk.dtb \
@@ -57,6 +54,8 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
 "
 # Set DTB load address to U-Boot fdt_addr_r
 UBOOT_DTB_LOADADDRESS = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', '0xc4000000', '', d)}"
+# List of U-Boot device tree to use
+UBOOT_DEVICETREE = "${STM32MP_DEVICETREE}"
 
 # =========================================================================
 # Machine features
@@ -85,6 +84,12 @@ IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "dey-image-webkit"
 
+# Wic files
+WKS_FILES += " \
+    ccmp1-512MB.wks.in \
+    ccmp1-1GB.wks.in \
+"
+
 # For populate_sdk, gcc-arm-none-eabi_9 has a python2 dependency, so we remove it.
 ST_TOOLS_FOR_SDK:remove = "nativesdk-gcc-arm-none-eabi"
 
@@ -108,7 +113,7 @@ ST_DEBUG_TRACE = "0"
 # optee
 # =========================================================================
 # Map OPTEE configuration to device tree list
-OPTEE_CONF = "ccmp15-dvk"
+OPTEE_CONF = "${STM32MP_DEVICETREE}"
 
 # =========================================================================
 # Flashlayouts
@@ -163,8 +168,10 @@ ST_VENDORFS = "0"
 
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = " \
-    arm-trusted-firmware/tf-a-ccmp15-dvk-nand.stm32 \
-    fip/fip-ccmp15-dvk-optee.bin \
+    arm-trusted-firmware/tf-a-ccmp15-dvk-512MB-nand.stm32 \
+    arm-trusted-firmware/tf-a-ccmp15-dvk-1GB-nand.stm32 \
+    fip/fip-ccmp15-dvk-512MB-optee.bin \
+    fip/fip-ccmp15-dvk-1GB-optee.bin \
 "
 
 # TRUSTFENCE basic support
