--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -18,8 +18,8 @@ MACHINEOVERRIDES = "arm:armv7ve:stcommon:stm32mpcommon:stm32mp1common:${DIGI_FAM
 # boot device
 # =========================================================================
 # Configure the list of boards that enable NAND/SDCARD
-DEVICE_BOARD_ENABLE:NAND   += "ccmp13-dvk"
-DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard', 'ccmp13-dvk', '', d)}"
+DEVICE_BOARD_ENABLE:NAND   += "${STM32MP_DEVICETREE}"
+DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard', '${STM32MP_DEVICETREE}', '', d)}"
 
 # =========================================================================
 # U-Boot configs
@@ -28,14 +28,11 @@ DEVICE_BOARD_ENABLE:SDCARD += "${@bb.utils.contains('BOOTDEVICE_LABELS', 'sdcard
 UBOOT_CONFIG = "ccmp13-dvk"
 UBOOT_CONFIG[ccmp13-dvk] = "ccmp13-dvk_defconfig,,u-boot-dtb.${UBOOT_SUFFIX}"
 
-# Platform U-Boot settings
-UBOOT_DTB_NAME = "ccmp13-dvk.dtb"
-
 # =========================================================================
 # Machine settings
 # =========================================================================
 # Define list of devicetree per board
-STM32MP_DEVICETREE ??= "ccmp13-dvk"
+STM32MP_DEVICETREE ??= "ccmp13-dvk-256MB"
 # Extra DTB for board - need to specify it with .dtb ...
 STM32MP_KERNEL_DEVICETREE:ccmp13-dvk += " \
     ccmp133-dvk.dtb \
@@ -50,6 +47,8 @@ STM32MP_KERNEL_DEVICETREE:ccmp13-dvk += " \
 "
 # Set DTB load address to U-Boot fdt_addr_r
 UBOOT_DTB_LOADADDRESS = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', '0xc4000000', '', d)}"
+# List of U-Boot device tree to use
+UBOOT_DEVICETREE = "${STM32MP_DEVICETREE}"
 
 # =========================================================================
 # Machine features
@@ -77,6 +76,9 @@ IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "core-image-base"
 
+# Wic files
+WKS_FILE += "ccmp1-256MB.wks.in"
+
 # For populate_sdk, gcc-arm-none-eabi_9 has a python2 dependency, so we remove it.
 ST_TOOLS_FOR_SDK:remove = "nativesdk-gcc-arm-none-eabi"
 
@@ -100,7 +102,7 @@ ST_DEBUG_TRACE = "0"
 # optee
 # =========================================================================
 # Map OPTEE configuration to device tree list
-OPTEE_CONF = "ccmp13-dvk"
+OPTEE_CONF = "${STM32MP_DEVICETREE}"
 
 # =========================================================================
 # Flashlayouts
@@ -158,8 +160,8 @@ ST_VENDORFS = "0"
 
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = " \
-    arm-trusted-firmware/tf-a-ccmp13-dvk-nand.stm32 \
-    fip/fip-ccmp13-dvk-optee.bin \
+    arm-trusted-firmware/tf-a-ccmp13-dvk-256MB-nand.stm32 \
+    fip/fip-ccmp13-dvk-256MB-optee.bin \
 "
 
 # TRUSTFENCE basic support
