linux-dey: ccmp1: rework defconfig logic to avoid using defualt defconfig
Commit d3f3cfdb6274f70146f351717b583990ea8bb1e0 removed the inclusion of STM's
linux-stm32mp.inc from meta-st-stm32mp in our linux-dey recipe, but this
inadvertently removed the logic in do_configure() necessary to use our custom
ccmp1_defconfig. Since this commit, the kernel was being built with the default
ARM defconfig, which is very different from our custom defconfig and doesn't
even boot on MP1 platforms.

Rework the logic used to copy our platform's defconfigs to prevent this.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -120,8 +120,7 @@ OPTEE_CONF = "ccmp15-dvk"
 KERNEL_IMAGETYPE = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', 'fitImage', 'zImage', d)}"
 KERNEL_CLASSES = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', 'kernel-fitimage', 'kernel-uimage', d)}"
 KERNEL_ALT_IMAGETYPE = "Image vmlinux"
-KERNEL_DEFCONFIG ?= "ccmp1_defconfig"
-KERNEL_EXTERNAL_DEFCONFIG ?= "defconfig"
+KERNEL_DEFCONFIG ?= "arch/arm/configs/ccmp1_defconfig"
 
 # =========================================================================
 # DEY settings
