--- a/meta-digi-arm/conf/machine/ccmp13-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp13-dvk.conf
@@ -112,8 +112,7 @@ OPTEE_CONF = "ccmp13-dvk"
 KERNEL_IMAGETYPE = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', 'fitImage', 'zImage', d)}"
 KERNEL_CLASSES = "${@bb.utils.contains('TRUSTFENCE_FIT_IMG', '1', 'kernel-fitimage', 'kernel-uimage', d)}"
 KERNEL_ALT_IMAGETYPE = "Image vmlinux"
-KERNEL_DEFCONFIG ?= "ccmp1_defconfig"
-KERNEL_EXTERNAL_DEFCONFIG ?= "defconfig"
+KERNEL_DEFCONFIG ?= "arch/arm/configs/ccmp1_defconfig"
 
 # =========================================================================
 # DEY settings
