--- a/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx8mm-dvk.conf
@@ -9,6 +9,7 @@ MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:${DIGI_FAMILY}:${DIGI_SOM}:"
 include conf/machine/include/ccimx8m.inc
 
 BOOTLOADER_SEEK_USERDATA = "33"
+BOOTLOADER_SEEK_BOOTPART = "33"
 
 # U-Boot configurations
 #
