ccimx93: include _ov_som_bt-dtm_ccimx93.dtbo file
https://onedigi.atlassian.net/browse/DEL-8327
https://onedigi.atlassian.net/browse/DEL-8458

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -22,6 +22,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_mikroe-accel2-click_ccimx93-dvk.dtbo \
     digi/_ov_board_mikroe-gyro-click_ccimx93-dvk.dtbo \
     digi/_ov_som_bt_ccimx93.dtbo \
+    digi/_ov_som_bt-dtm_ccimx93.dtbo \
     digi/_ov_som_npu_ccimx93.dtbo \
     digi/_ov_som_wifi_ccimx93.dtbo \
 "
