linux-virtualization: expand docker config extract
expand the docker defconfig excerpt to add more default options, as some
of them might be enable in some platform defconfigs but not in other ones,
so just set all of them, as it is safe, and nothing happens if they are
already set in the original default defconfig.

To check if all LXC/docker options are enabled for a kernel,
run lxc-checkconfig in the system.

https://onedigi.atlassian.net/browse/DEL-8924

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-arm/recipes-kernel/linux/linux-dey/docker_conf.cfg
+++ b/meta-digi-arm/recipes-kernel/linux/linux-dey/docker_conf.cfg
@@ -48,3 +48,8 @@ CONFIG_BRIDGE_NETFILTER=m
 CONFIG_BRIDGE=m
 CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_PACKET_DIAG=m
+CONFIG_UNIX_DIAG=m
+CONFIG_NETFILTER_XT_MATCH_COMMENT=m
+CONFIG_NETLINK_DIAG=m
+CONFIG_MACVLAN=y
