swupdate: reduce default log level in runtime config file
The current log level is very verbose and generates way too much output in some
cases, such as a binary diff update. Reduce the default log level to avoid
this.

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/recipes-support/swupdate/swupdate/swupdate.config
+++ b/meta-digi-dey/recipes-support/swupdate/swupdate/swupdate.config
@@ -9,8 +9,8 @@
 #
 
 globals : {
-	verbose = true;
-	loglevel = 5;
+	verbose = false;
+	loglevel = 3;
 	syslog = true;
 	#mtd-blacklist
 	#public-key-file
