--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -67,7 +67,7 @@ MACHINE_FEATURES += "gpu"
 # =========================================================================
 # Firmware
 # =========================================================================
-MACHINE_FIRMWARE:append = " firmware-murata-infineon firmware-murata-infineon-mfgtest"
+MACHINE_FIRMWARE:append = " firmware-murata-infineon"
 
 MACHINE_EXTRA_RRECOMMENDS += " \
     ${MACHINE_FIRMWARE} \
