ccmp15: add DT overlay for the SV4E MIPI analyzer
https://onedigi.atlassian.net/browse/DEL-8978

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -45,6 +45,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_board_mikroe-accel2-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-gyro-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-i2c-to-spi-click_ccmp15-dvk.dtbo \
+    _ov_board_sv4e-mipi-analyzer_ccmp15-dvk.dtbo \
     _ov_board_v1_ccmp15-dvk.dtbo \
     _ov_board_v2_ccmp15-dvk.dtbo \
     _ov_som_bt_ccmp15.dtbo \
