ccmp15: add overlay for SOM hardware version 1
At the moment, this overlay adds RTC calibration to compensate
the drift observed in the 32kHz input frequency of hardware
version 1 of the SOM.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://onedigi.atlassian.net/browse/DEL-8987

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -53,6 +53,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_som_bt_ccmp15.dtbo \
     _ov_som_bt_test_ccmp15.dtbo \
     _ov_som_m4_ccmp15.dtbo \
+    _ov_som_v1_ccmp15.dtbo \
     _ov_som_wifi_ccmp15.dtbo \
 "
 # Set DTB load address to U-Boot fdt_addr_r
