--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -38,6 +38,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     ccmp157-dvk.dtb \
     _ov_board_can1_ccmp15-dvk.dtbo \
     _ov_board_can2_ccmp15-dvk.dtbo \
+    _ov_board_dlc0200ccp04df-mipi-dsi_ccmp15-dvk.dtbo \
     _ov_board_eth0-10-100_ccmp15-dvk.dtbo \
     _ov_board_fusion10-lvds_ccmp15-dvk.dtbo \
     _ov_board_fusion7-parallel_ccmp15-dvk.dtbo \
