tsn: add basic Time sensitive networking (TSN)
This commit adds some basic TSN support to DEY.
It includes the kernel configuration fragment with
the IEEE 802.1 support and the some user space tools
necessary to configure the network.

https://onedigi.atlassian.net/browse/DEL-9026

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -25,6 +25,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_som_bt-dtm_ccimx93.dtbo \
     digi/_ov_som_npu_ccimx93.dtbo \
     digi/_ov_som_wifi_ccimx93.dtbo \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'tsn', 'digi/_ov_board_eqos-tsn_ccimx93-dvk.dtbo', '', d)} \
 "
 
 # Wireless external module
