ccmp15: add overlay for NHD-3.5-640480EF-MSXP MIPI display
https://onedigi.atlassian.net/browse/DEL-9036

Signed-off-by: Gonzalo Ruiz <Gonzalo.Ruiz@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp15-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp15-dvk.conf
@@ -46,6 +46,7 @@ STM32MP_KERNEL_DEVICETREE:ccmp15-dvk += " \
     _ov_board_mikroe-accel2-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-gyro-click_ccmp15-dvk.dtbo \
     _ov_board_mikroe-i2c-to-spi-click_ccmp15-dvk.dtbo \
+    _ov_board_nhd-3-5-640480ef-msxp-mipi-dsi_ccmp15-dvk.dtbo \
     _ov_board_sv4e-mipi-analyzer_ccmp15-dvk.dtbo \
     _ov_board_v1_ccmp15-dvk.dtbo \
     _ov_board_v2_ccmp15-dvk.dtbo \
