--- a/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccmp2/asound.conf
+++ b/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccmp2/asound.conf
@@ -1,9 +1,9 @@
-pcm.stm32max98088 {
+pcm.ccmp25dvk {
     type hw
     card 0
 }
-ctl.stm32max98088 {
+ctl.ccmp25dvk {
     type hw
     card 0
 }
-ctl.!default stm32max98088
+ctl.!default ccmp25dvk
