--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -21,6 +21,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_lvds_ccimx93-dvk.dtbo \
     digi/_ov_board_mikroe-accel2-click_ccimx93-dvk.dtbo \
     digi/_ov_board_mikroe-gyro-click_ccimx93-dvk.dtbo \
+    digi/_ov_board_nhd-3-5-640480ef-msxp-mipi-dsi_ccimx93-dvk.dtbo \
     digi/_ov_som_bt_ccimx93.dtbo \
     digi/_ov_som_bt-dtm_ccimx93.dtbo \
     digi/_ov_som_npu_ccimx93.dtbo \
