--- a/meta-digi-arm/recipes-kernel/linux/linux-dey/docker_conf.cfg
+++ b/meta-digi-arm/recipes-kernel/linux/linux-dey/docker_conf.cfg
@@ -40,8 +40,7 @@ CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_CGROUP_BPF=y
 CONFIG_CGROUP_NS=y
-CONFIG_CGROUP_FREEZER=y
-CONFIG_CGROUP_DEVICE=y
+CONFIG_IP_NF_FILTER=m
 CONFIG_BLK_CGROUP=y
 CONFIG_NETFILTER=y
 CONFIG_BRIDGE_NETFILTER=m
