libdigiapix: ccimx9: add missing spi entry in libdigiapix.conf
Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx9/libdigiapix.conf
+++ b/meta-digi-dey/recipes-digi/libdigiapix/libdigiapix-git/ccimx9/libdigiapix.conf
@@ -22,6 +22,11 @@ USER_BUTTON2 = gpiochip3,23
 # I2C-3 on MikroBus connector.
 DEFAULT_I2C_BUS = 2
 
+[SPI]
+
+# LPSPI-8 on MikroBus connector J39.
+DEFAULT_SPI = 0,0
+
 [PWM]
 
 # PWM0 channel 1 - LVDS backlight.
