ccmp25-dvk: add boot artifacts to deploy into the zip installer
This commit adds the boot artifacts required to perform a full firmware deploy.

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp25-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp25-dvk.conf
@@ -131,6 +131,13 @@ ALSA_LIST = ""
 ST_VENDORFS = "0"
 ST_USERFS   = "0"
 
+# Boot artifacts to be copied from the deploy dir to the installer ZIP
+BOOTABLE_ARTIFACTS = " \
+    arm-trusted-firmware/tf-a-ccmp25-dvk-emmc.stm32 \
+    fip/fip-ccmp25-dvk-optee.bin \
+    metadata-ccmp25-dvk.bin \
+"
+
 # Per-machine DISTRO_FEATURES customization
 MACHINE_DISTRO_FEATURES_REMOVE = "x11"
 
