u-boot-dey: add new version v2024.04 recipe for ccimx91
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx91-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx91-dvk.conf
@@ -27,6 +27,9 @@ KERNEL_DEVICETREE ?= " \
     ${@bb.utils.contains('DISTRO_FEATURES', 'tsn', 'digi/_ov_board_eqos-tsn_ccimx9-dvk.dtbo', '', d)} \
 "
 
+# Default image for install scripts
+DEFAULT_IMAGE_NAME ?= "core-image-base"
+
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = " \
     imx-boot-ccimx91-dvk.bin \
