imx-atf: add new version 2.10 recipe for ccimx91
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx91-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx91-dvk.conf
@@ -44,4 +44,4 @@ IMXBOOT_TARGETS = "flash_singleboot"
 IMX_BOOT_SOC_TARGET = "iMX91"
 
 # Set ATF platform name
-ATF_PLATFORM = "imx91p"
+ATF_PLATFORM = "imx91"
