--- a/meta-digi-arm/conf/machine/ccimx91-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx91-dvk.conf
@@ -14,6 +14,12 @@ IMXBOOT_TARGETS = "flash_singleboot"
 UBOOT_CONFIG ??= "ccimx91-dvk"
 UBOOT_CONFIG[ccimx91-dvk] = "ccimx91-dvk_defconfig"
 
+# imx-boot configurations
+ATF_PLATFORM = "imx91"
+IMX_BOOT_SOC_TARGET = "iMX91"
+IMXBOOT_TARGETS = "flash_singleboot"
+SECO_FIRMWARE_NAME = "mx91a0-ahab-container.img"
+
 BOOTLOADER_SEEK_USERDATA = "32"
 
 KERNEL_DEVICETREE ?= " \
@@ -39,9 +45,3 @@ BOOTABLE_ARTIFACTS = " \
 SOC_TOOLS_TEST:append:mx91-nxp-bsp = " imx-secure-enclave"
 # Add AFE support
 NXPAFE_INSTALL:mx91-nxp-bsp = "nxp-afe nxp-afe-voiceseeker"
-
-IMXBOOT_TARGETS = "flash_singleboot"
-IMX_BOOT_SOC_TARGET = "iMX91"
-
-# Set ATF platform name
-ATF_PLATFORM = "imx91"
