--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -12,10 +12,13 @@ include conf/machine/include/ccimx9.inc
 UBOOT_CONFIG ??= "ccimx93-dvk"
 UBOOT_CONFIG[ccimx93-dvk] = "ccimx93-dvk_defconfig"
 
-# Set ATF platform name
+# imx-boot configurations
 ATF_PLATFORM = "imx93"
 IMX_BOOT_SOC_TARGET = "iMX93"
 IMXBOOT_TARGETS = "flash_singleboot flash_singleboot_a0"
+# Generate images for all SOC revisions (keep the override as otherwise the
+# one in "use-imx-security-controller-firmware.bbclass" takes precedence)
+SECO_FIRMWARE_NAME:ccimx93 = "mx93??-ahab-container.img"
 
 KERNEL_DEVICETREE ?= " \
     digi/ccimx93-dvk.dtb \
