ccmp25-dvk: add OVERLAYFS configs for read-only
When EXTRA_IMAGE_FEATURES += "overlayfs-etc" is added these
configurations are needed to compile. They are provided with
the default configuration to work with our software.

https://onedigi.atlassian.net/browse/DEL-9186

Signed-off-by: Francisco Gil <francisco.gilmartinez@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp25-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp25-dvk.conf
@@ -143,3 +143,8 @@ MACHINE_DISTRO_FEATURES_REMOVE = "x11"
 
 # Default ROOTFS max size for image being built to this value
 IMAGE_ROOTFS_MAXSIZE = "1572864"
+
+# Default overlayfs_etc mount point and type
+OVERLAYFS_ETC_MOUNT_POINT ?= "/mnt/data"
+OVERLAYFS_ETC_DEVICE ?= "/dev/mmcblk0p10"
+OVERLAYFS_ETC_FSTYPE ?= "ext4"
