--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -29,6 +29,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_board_mikroe-gyro-click_ccimx9-dvk.dtbo \
     digi/_ov_som_bt_ccimx9.dtbo \
     digi/_ov_som_bt-dtm_ccimx9.dtbo \
+    digi/_ov_som_emulate-ccimx91_ccimx93.dtbo \
     digi/_ov_som_npu_ccimx93.dtbo \
     digi/_ov_som_wifi_ccimx9.dtbo \
     ${@bb.utils.contains('DISTRO_FEATURES', 'tsn', 'digi/_ov_board_eqos-tsn_ccimx9-dvk.dtbo', '', d)} \
