sdcard: add support to create sdcard image for CCMP2
This commit adds the necessary wks file to create an SDcard
image for the CCMP2.

https://onedigi.atlassian.net/browse/DEL-9181

Signed-off-by: Mike Engel <Mike.Engel@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp25-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp25-dvk.conf
@@ -111,6 +111,11 @@ IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "dey-image-qt"
 
+# Wic files
+WKS_FILES += " \
+    ccmp2-1GB.wks.in \
+"
+
 # Remove additional bluetooth packages
 MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
 
