--- a/meta-digi-dey/recipes-connectivity/bluez/bluez5-init/ccimx9/bluetooth-init.service
+++ b/meta-digi-dey/recipes-connectivity/bluez/bluez5-init/ccimx9/bluetooth-init.service
@@ -1,8 +1,7 @@
 [Unit]
 Description=Initialization of the IW612 bluetooth chip
 ConditionPathIsDirectory=/proc/device-tree/bluetooth
-Before=bluetooth.service
-After=systemd-modules-load.service
+After=systemd-udev-settle.service,bluetooth.service
 
 [Service]
 Type=oneshot
