bluetooth-init: fix systemd service syntax
According to systemd manual, "After" setting expects a space-separated
list. Fix the wrong comma-separated list to prevent the following boot
failure:

  bluetooth-init.service:4: Failed to add dependency on systemd-udev-settle.service,bluetooth.service, ignoring: Invalid argument

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/recipes-connectivity/bluez/bluez5-init/ccimx9/bluetooth-init.service
+++ b/meta-digi-dey/recipes-connectivity/bluez/bluez5-init/ccimx9/bluetooth-init.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Initialization of the IW612 bluetooth chip
 ConditionPathIsDirectory=/proc/device-tree/bluetooth
-After=systemd-udev-settle.service,bluetooth.service
+After=systemd-udev-settle.service bluetooth.service
 
 [Service]
 Type=oneshot
