ccmp25-dvk: default to use dey-image-webkit on installers
This image is the one that contains the Get Started demo.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp25-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp25-dvk.conf
@@ -109,7 +109,7 @@ IMAGE_FSTYPES += '${@bb.utils.contains("IMAGE_FEATURES", "read-only-rootfs", \
                                        "boot.vfat recovery.vfat ext4.gz tar.bz2", d)}'
 
 # Default image for install scripts
-DEFAULT_IMAGE_NAME ?= "dey-image-qt"
+DEFAULT_IMAGE_NAME ?= "dey-image-webkit"
 
 # Wic files
 WKS_FILES += " \
