ccimx91: configure platform as headless
This removes the psplash package from "core-image" images, which
prevents this failure onn boot:

[FAILED] Failed to start Start psplash boot splash screen.
psplash[454]: Error opening /dev/fb0

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx91-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx91-dvk.conf
@@ -36,6 +36,9 @@ KERNEL_DEVICETREE ?= " \
 # Default image for install scripts
 DEFAULT_IMAGE_NAME ?= "core-image-base"
 
+# Set this platform without graphical support
+IS_HEADLESS = "true"
+
 # Boot artifacts to be copied from the deploy dir to the installer ZIP
 BOOTABLE_ARTIFACTS = " \
     imx-boot-ccimx91-dvk.bin \
