ccmp25-dvk: add flag to support virtual wireless interfaces
CYW55512 Wireless chip supports concurrent modes and virtual wireless
interfaces like SotfAP and P2P.

https://onedigi.atlassian.net/browse/DEL-9237

Signed-off-by: Arturo Buzarra <arturo.buzarra@digi.com>

--- a/meta-digi-arm/conf/machine/ccmp25-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccmp25-dvk.conf
@@ -116,6 +116,9 @@ WKS_FILES += " \
     ccmp2-1GB.wks.in \
 "
 
+# Wireless external module
+HAS_WIFI_VIRTWLANS = "true"
+
 # Remove additional bluetooth packages
 MACHINE_BLUETOOTH_EXTRA_INSTALL = ""
 
