eiq-examples: improvements
* do not run the demos in background, if not they can not be ctrl+c.
* fix service dependencies: required camera and weston.
* patch the examples to:
** set camera resolution to 1280x720
** set default format to ov5640 camera (YUYV)
** detect the "x" event when the demo application is running in windowed mode (not fullscreen).

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/dynamic-layers/meta-ml/recipes-libraries/eiq-examples/files/service/eiqdemo.service
+++ b/meta-digi-dey/dynamic-layers/meta-ml/recipes-libraries/eiq-examples/files/service/eiqdemo.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=Initialization of EiQ DMS demo
-After=multi-user.target
+After=graphical.target
+ConditionPathExists=/dev/video0
 
 [Service]
-Type=forking
+Type=exec
+RemainAfterExit=yes
 ExecStart=/etc/demos/scripts/launch_eiq_demo.sh
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=graphical.target
