ccimx93: add support for single core 512M variants
https://onedigi.atlassian.net/browse/DEL-9221

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx93-dvk.conf
+++ b/meta-digi-arm/conf/machine/ccimx93-dvk.conf
@@ -31,6 +31,7 @@ KERNEL_DEVICETREE ?= " \
     digi/_ov_som_bt-dtm_ccimx9.dtbo \
     digi/_ov_som_emulate-ccimx91_ccimx93.dtbo \
     digi/_ov_som_npu_ccimx93.dtbo \
+    digi/_ov_som_single-core-512M_ccimx93.dtbo \
     digi/_ov_som_wifi_ccimx9.dtbo \
     ${@bb.utils.contains('DISTRO_FEATURES', 'tsn', 'digi/_ov_board_eqos-tsn_ccimx9-dvk.dtbo', '', d)} \
 "
