dey: fix do_fetch of a couple of recipes
The upstream repositories for puzzles and thin-provisioning-tools renamed
their master branch to main. This broke the build of those packages,
as Yocto could no longer fetch them.

To implement workarounds for these kinds of failures, create a generic
"maintenance.inc" configuration file included at the distro level.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -148,3 +148,6 @@ INHERIT += "uninative"
 
 # Enable removal of libtool '*.la' files (this is the default starting in 2.3)
 INHERIT += "remove-libtool"
+
+# Centralized maintenance metadata fixes
+require maintenance.inc
