dey: fix do_fetch of a couple of recipes
The upstream repository for c-ares renamed its master branch to main,
breaking the build because Yocto could no longer fetch it.

To implement workarounds for these kinds of failures, create a generic
"maintenance.inc" configuration file included at the distro level.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -144,3 +144,6 @@ BB_HASHSERVE ??= "auto"
 
 # Enable removal of libtool '*.la' files (this is the default starting in 2.3)
 INHERIT += "remove-libtool"
+
+# Centralized maintenance metadata fixes
+require maintenance.inc
